# wickra-proof

./: ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  deny.toml  lychee.toml  osv-scanner.toml  repo-metadata.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/scripts/: check-cbindgen.sh  wasm-hash-parity.mjs
.github/workflows/: bench.yml  ci.yml  release.yml
bindings/c/: Cargo.toml  README.md  cbindgen.toml
bindings/c/include/: wickra_proof.h
bindings/c/src/: lib.rs
bindings/csharp/WickraProof/: DllResolver.cs  Native.cs  Prover.cs  README.md  WickraProof.csproj
bindings/csharp/WickraProof.Tests/: GoldenTests.cs  ProverTests.cs  WickraProof.Tests.csproj
bindings/go/: README.md  go.mod  golden_test.go  proof_test.go  wickra.go
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/org/wickra/proof/: Native.java  Prover.java
bindings/java/src/test/java/org/wickra/proof/: GoldenTest.java  ProverTest.java
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/__tests__/: completeness.test.js  golden.test.js  proof.test.js
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-arm64-msvc/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/wickra_proof/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_completeness.py  test_golden.py  test_smoke.py
bindings/r/: DESCRIPTION  NAMESPACE  README.md
bindings/r/R/: proof.R
bindings/r/src/: Makevars  Makevars.win  wickra_proof.c
bindings/r/tests/: run_tests.R
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
crates/proof-bench/: Cargo.toml
crates/proof-bench/benches/: proof.rs
crates/proof-core/: Cargo.toml
crates/proof-core/src/: canonical.rs  config.rs  error.rs  lib.rs  proof.rs  spec.rs  tests.rs
crates/proof-core/tests/: canonical.rs  conformance.rs  golden.rs  proptest_invariants.rs  prove_verify.rs
crates/proof-core/tests/common/: mod.rs
crates/wickra-proof-cli/: Cargo.toml
crates/wickra-proof-cli/src/: args.rs  main.rs  run.rs
docs/: ARCHITECTURE.md  CANONICAL.md  PROOF_FORMAT.md  VERIFYING.md
examples/: README.md
examples/c/: CMakeLists.txt  prove.c  prove.cpp
examples/csharp/Prove/: Program.cs  Prove.csproj
examples/data/: config.json  config.proof.json
examples/data/proofs/: example.json
examples/data/specs/: example.json
examples/go/: go.mod  prove.go
examples/java/: Prove.java
examples/node/: package-lock.json  package.json  prove.js
examples/python/: prove.py
examples/r/: prove.R
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: canonicalize.rs  prove.rs  spec_parse.rs  verify_roundtrip.rs
golden/: README.md  _bless.mjs  data.json
golden/data/: AAA.csv  BBB.csv  CCC.csv
golden/expected/: buy_hold.json  rsi_reversion.json  sma_cross.json
golden/specs/: buy_hold.json  rsi_reversion.json  sma_cross.json
