# Wickra Proof — workspace.
# Proof-of-Backtest: a (spec, data) pair is folded into a deterministic
# wickra-backtest report and a canonical blake3 hash that anyone recomputes
# byte-for-byte in ten languages. The core (`proof-core`) is exposed as a
# JSON-over-C-ABI data API in ten languages, mirroring the Wickra tiering:
# Rust core -> native Python/Node/WASM + a C ABI hub for C/C++/C#/Go/Java/R.
#
# The `members` list grows as crates are added, phase by phase; the final set is:
#   crates/proof-core, crates/wickra-proof-cli, crates/proof-bench,
#   bindings/c, bindings/python, bindings/node, bindings/wasm, examples/rust

[workspace]
resolver = "2"
members = ["crates/proof-core", "crates/wickra-proof-cli", "crates/proof-bench", "bindings/c", "bindings/python", "bindings/node", "bindings/wasm", "examples/rust"]
# The fuzz crate is its own (detached) workspace — cargo-fuzz builds it on a
# nightly toolchain with sanitizer flags.
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
authors = ["wickra-lib"]
repository = "https://github.com/wickra-lib/wickra-proof"
homepage = "https://wickra.org"
readme = "README.md"
keywords = ["trading", "backtest", "proof", "determinism", "finance"]
categories = ["finance", "command-line-utilities"]

[workspace.dependencies]
# The backtest engine is the runtime dependency: proof runs it and hashes its
# report canonically. Consumed from git until its first crates.io release (its
# tag is USER-GO gated); a `version` is pinned alongside `git` so it is not a
# wildcard (cargo-deny bans.wildcards). Its version() is the engine_version pin.
wickra-backtest-core = { git = "https://github.com/wickra-lib/wickra-backtest", version = "0.1" }
# Candle + CSV loading for the CLI's data input.
wickra-data = "0.9"
# Workspace-internal crate, referenced by the CLI, bench and bindings.
proof-core = { version = "0.1.0", path = "crates/proof-core" }
# Serialization — the data-driven boundary (spec/proof/report/command as JSON).
serde = { version = "1", features = ["derive"] }
# `float_roundtrip` makes serde_json's float parser correctly rounded: a float
# re-parses to the exact same f64 it was written from. Without it the parser can
# land on an adjacent f64 for large magnitudes, which breaks canonicalization
# idempotence (canonicalize -> parse -> canonicalize must be a fixed point) — the
# moat's load-bearing invariant, checked by the `canonicalize` fuzz target.
serde_json = { version = "1", features = ["float_roundtrip"] }
toml = "1.1"
# Exact decimal arithmetic where price/qty precision matters.
rust_decimal = { version = "1", features = ["serde"] }
thiserror = "2"
# The canonical report/inputs hash.
blake3 = "1"
clap = { version = "4", features = ["derive"] }
# C ABI header generation.
cbindgen = "0.27"
# Test/dev.
criterion = "0.8"
proptest = "1"

[workspace.lints.rust]
# The core and all bindings are safe Rust; the C ABI hub re-allows unsafe
# locally (it must call across the FFI boundary).
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
similar_names = "allow"

[profile.release]
# Panics must never unwind across the C ABI boundary: abort instead.
lto = true
codegen-units = 1
panic = "abort"
strip = true
