[package]
name = "proof-bench"
description = "Criterion benchmarks for the Wickra proof core: prove scaling by bar count and indicator count, and canonicalization of small vs large reports."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
proof-core.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "proof"
harness = false
