[package]
name = "wickra-proof-example"
description = "A runnable Rust example for the Wickra proof core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "prove"
path = "src/main.rs"

[dependencies]
proof-core = { workspace = true }
serde_json = { workspace = true }
